crates/rome_js_formatter/tests/specs/prettier/js/module-blocks/range.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\module-blocks\\range.js"
---

# Input

```js
let moduleBlock = module {  export let y = 1;
};

foo(module { export let foo = "foo"; })
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,7 +1,5 @@
 let moduleBlock = module {
   export let y = 1;
-};
+}
 
-foo(module {
-  export let foo = "foo";
-});
+foo(module { export let foo = "foo"; })
```

# Output

```js
let moduleBlock = module {
  export let y = 1;
}

foo(module { export let foo = "foo"; })
```


# Errors
```
range.js:1:26 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ range.js:1:26
    │
  1 │ let moduleBlock = module {  export let y = 1;
    │                          ^
  
  i ...Which is required to end this statement
  
    ┌─ range.js:1:1
    │
  1 │ let moduleBlock = module {  export let y = 1;
    │ ^^^^^^^^^^^^^^^^^^^^^^^^^
  
range.js:1:29 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
    ┌─ range.js:1:29
    │
  1 │ let moduleBlock = module {  export let y = 1;
    │                             ^^^^^^^^^^^^^^^^^
  
range.js:4:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `{`
  
  × unexpected
  
    ┌─ range.js:4:12
    │
  4 │ foo(module { export let foo = "foo"; })
    │            ^
  
range.js:4:21 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `let`
  
  × unexpected
  
    ┌─ range.js:4:21
    │
  4 │ foo(module { export let foo = "foo"; })
    │                     ^^^
  
range.js:4:25 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `foo`
  
  × unexpected
  
    ┌─ range.js:4:25
    │
  4 │ foo(module { export let foo = "foo"; })
    │                         ^^^
  
range.js:4:29 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Did you mean to use a `:`? An `=` can only follow a property name when the containing object literal is part of a destructuring pattern.
  
    ┌─ range.js:4:29
    │
  4 │ foo(module { export let foo = "foo"; })
    │                             ^
  
range.js:4:36 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `;`
  
  × unexpected
  
    ┌─ range.js:4:36
    │
  4 │ foo(module { export let foo = "foo"; })
    │                                    ^
  
range.js:4:38 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '})'
  
  × Expected a statement here
  
    ┌─ range.js:4:38
    │
  4 │ foo(module { export let foo = "foo"; })
    │                                      ^^
  

```


